--- a/HeuristicAlgorithms/HeuristicAlgorithms/HeuristicAlgorithms.csproj
+++ b/HeuristicAlgorithms/HeuristicAlgorithms/HeuristicAlgorithms.csproj
@@ -42,8 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IAlgorithmStrategy.cs" />
+    <Compile Include="FireflyAlgorithm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimmulatedAnnealingAlgorithm.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
