--- a/HeuristicAlgorithms/HeuristicAlgorithms.csproj
+++ b/HeuristicAlgorithms/HeuristicAlgorithms.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Algorithms\FireflyAlgorithm.cs" />
     <Compile Include="Functions\EasomFunction.cs" />
     <Compile Include="Functions\InverseHeatConductionProblemFunction.cs" />
-    <Compile Include="Functions\InverseProblem.cs" />
+    <Compile Include="Functions\DirectProblem.cs" />
     <Compile Include="Functions\RosenbrockFunction.cs" />
     <Compile Include="Models\AnnealingTestingModel.cs" />
     <Compile Include="Models\FireflyModel.cs" />
