--- a/HeuristicAlgorithms/HeuristicAlgorithms.csproj
+++ b/HeuristicAlgorithms/HeuristicAlgorithms.csproj
@@ -49,7 +49,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithms\IAlgorithm.cs" />
-    <Compile Include="Functions\EasomFunction.cs" />
     <Compile Include="Functions\InverseHeatConductionProblemFunction.cs" />
     <Compile Include="Functions\DirectProblem.cs" />
     <Compile Include="Functions\RosenbrockFunction.cs" />
@@ -76,7 +75,7 @@
       <DependentUpon>MainView.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\AnnealingTestingModel.cs" />
-    <Compile Include="Functions\CircleFunction.cs" />
+    <Compile Include="Functions\QuadraticFunction.cs" />
     <Compile Include="Functions\TestingFunction.cs" />
     <Compile Include="Functions\RastriginFunction.cs" />
     <Compile Include="Program.cs" />
